create post.json and import first post to firebase.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,5 @@
-{{outlet}}
+<div class="jumbotron">
+  <h1>Blogémon <small>Gotta blog 'em all!</small></h1>
+</div>
 
-<h1>Pokemon Blog</h1>
+{{outlet}}
