--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,7 +1,8 @@
 <h1>Blogvolution</h1>
-
-<p>
-  Pokemon Blog was created by Mr.Charizard in 1997. He created it  for the purpose of providing Pokemon around the world with the ability to connect and share stories of their adventures.
-</p>
+<div class="jumbotron">
+  <p>
+    Blogémon was created by Mr.Charizard in 1997. He created it  for the purpose of providing Pokémon around the world with the ability to connect and share stories of their adventures.
+  </p>
+</div>
 
 <img src="http://orig12.deviantart.net/d1df/f/2013/265/d/e/mustashcharzurd_by_gearpunk-d6nh512.png" alt="Fancy Mr.Charizard" />
