--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -3,7 +3,7 @@
 <div class="col-md-4">
   <div class="news">
     <div class="info">
-      <h3>{{post.title}}</h3>
+      <h3>{{post.title}}<small> {{post.author}}</small></h3>
       <img src={{post.image}} alt="" height="250px" width="250px" />
       <p>{{post.text}}</p>
     </div>
