--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -5,4 +5,6 @@
   </p>
 </div>
 
-<img src="http://orig12.deviantart.net/d1df/f/2013/265/d/e/mustashcharzurd_by_gearpunk-d6nh512.png" alt="Fancy Mr.Charizard" />
+<center>
+  <img src="http://orig12.deviantart.net/d1df/f/2013/265/d/e/mustashcharzurd_by_gearpunk-d6nh512.png" alt="Fancy Mr.Charizard" />
+</center>
