--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -25,8 +25,8 @@
     </div>
   </nav>
 </div>
-<!-- <audio src="http://a.tumblr.com/tumblr_lt59z9tjGx1qgw2ypo1.mp3" loop autoplay> -->
-<!-- </audio> -->
+<audio src="http://a.tumblr.com/tumblr_lt59z9tjGx1qgw2ypo1.mp3" loop autoplay>
+</audio>
 <div class="container">
   {{outlet}}
 </div>
