--- a/app/templates/components/new-post.hbs
+++ b/app/templates/components/new-post.hbs
@@ -18,13 +18,13 @@
       </div>
 
       <div class="form-group">
-        <label for="image">Image</label>
+        <label for="image">Image URL</label>
         {{input value=image id="image" class="form-control"}}
       </div>
 
-      <button {{action 'save1'}}>Add Post</button>
+      <button class="btn btn-default" {{action 'save1'}}>Add Post</button>
     </form>
   </div>
 {{else}}
-  <button {{action 'postFormShow'}}>New Post</button>
+  <button class="btn btn-primary"{{action 'postFormShow'}}>New Post</button>
 {{/if}}
