--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,8 +5,11 @@
   </div>
 </div>
 
-{{#each model as |post|}}
-  {{post-tile post=post}}
-{{/each}}
+<div class="row">
+  {{#each model as |post|}}
+    {{post-tile post=post update="update" destroyPost="destroyPost"}}
+  {{/each}}
+</div>
+
 
 {{new-post save2="save3"}}
