--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -1,7 +1,7 @@
 <div class="col-md-4">
   <div class="news">
     <div class="info">
-      <h3>{{post.title}}<small> {{post.author}}</small></h3>
+      <h3>{{#linkTo 'post' post.id}}{{post.title}}{{/linkTo}}<small> {{post.author}}</small></h3>
       <center>
         <img src={{post.image}} alt="" height="250px" width="250px" />
       </center>
