--- a/app/templates/components/update-post.hbs
+++ b/app/templates/components/update-post.hbs
@@ -4,22 +4,22 @@
   <form>
     <div class="form-group">
       <label for="title">Title</label>
-      {{input value=title id="title" placeholder=post.title class="form-control"}}
+      {{input value=post.title id="title" class="form-control"}}
     </div>
 
     <div class="form-group">
       <label for="author">Author</label>
-      {{input value=author id="author" placeholder=post.author class="form-control"}}
+      {{input value=post.author id="author" class="form-control"}}
     </div>
 
     <div class="form-group">
       <label for="text">Text</label>
-      {{textarea value=text id="text" placeholder=post.text class="form-control"}}
+      {{textarea value=post.text id="text" class="form-control"}}
     </div>
 
     <div class="form-group">
       <label for="image">Image URL</label>
-      {{input value=image id="image" placeholder=post.image class="form-control"}}
+      {{input value=post.image id="image" class="form-control"}}
     </div>
 
     <button class="btn btn-default" {{action 'update' post}}>Save</button>
