Update layout of contact routes.

--- a/app/templates/contact/address.hbs
+++ b/app/templates/contact/address.hbs
@@ -1,2 +1,8 @@
-<h3>Address:</h3>
-<p>1997 Rhyhorn Avenue, Pallet Town</p>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h2 class="panel-title">Address</h2>
+  </div>
+  <div class="panel-body">
+    1997 Rhyhorn Avenue, Pallet Town
+  </div>
+</div>
