--- a/app/templates/contact/email.hbs
+++ b/app/templates/contact/email.hbs
@@ -1,2 +1,8 @@
-<h3>Email:</h3>
-<p>pokemon-blog@pika.com</p>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h2 class="panel-title">Email</h2>
+  </div>
+  <div class="panel-body">
+    pokemon-blog@pika.com
+  </div>
+</div>
