--- a/app/templates/contact/phone.hbs
+++ b/app/templates/contact/phone.hbs
@@ -1,2 +1,8 @@
-<h3>Phone Number:</h3>
-<p>1-800-POKEMON (1-800-765-3666)</p>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h2 class="panel-title">Phone Number</h2>
+  </div>
+  <div class="panel-body">
+    1-800-POKEMON (1-800-765-3666)
+  </div>
+</div>
